--- a/sections/banner.liquid
+++ b/sections/banner.liquid
@@ -52,13 +52,18 @@
   /* Image and placeholder size and position */
   .image-container-{{ section.id }} img,
   .image-container-{{ section.id }} svg {
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
     z-index: -2;
+
+    /* z-index: -2;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     object-position: center;
-    object-fit: cover;
+    object-fit: cover; */
   }
 
   /* Section overlay */
@@ -70,7 +75,7 @@
     width: 100%;
     height: 100%;
     opacity: {{ section.settings.image_overlay_opacity | divided_by: 100.0 }};
-    z-index: -1;
+    z-index: 2;
   }
 
   /* Section Padding */
@@ -88,6 +93,10 @@
       width: 100%;
       height: 100%;
       z-index: 3;
+
+      position: absolute;
+      left: 0;
+      top: 0;
     }
 
     /* Content title */
