--- a/sections/cart.liquid
+++ b/sections/cart.liquid
@@ -263,16 +263,32 @@
       width: 70px;
     }
 
+    .{{ section.id }} input {
+      width: 50px;
+      font-size: 10px;
+    }
+
     .{{ section.id }} p,
     .grid-item .product-title,
     .grid-item {
       font-size: 14px;
+    }
+
+    .{{ section.id }} .proceed-to-checkout {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .{{ section.id }} .proceed-to-checkout p {
+      text-align: center;
     }
   }
 
   @media screen and (max-width: 320px) {
     .{{ section.id }} input {
       display: none;
+      font-size: 8px;
     }
 
     .{{ section.id }} p,
