--- a/assets/application.css.liquid
+++ b/assets/application.css.liquid
@@ -2,9 +2,9 @@
 /* Note: "@import" rules aren’t supported. */
 
 /* ROBOTO */
- @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500&display=swap');
 /* POPPINS */
- @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;600&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500&display=swap');
 
 * {
   box-sizing: border-box;
@@ -30,14 +30,15 @@ html {
 }
 
 body {
-  font-family: "Poppins", sans-serif;
-  /* font-family: "Roboto", sans-serif; */
-  font-size: 1.6rem;
+  /* font-family: "Poppins", sans-serif; */
+  /* position: relative; */
+  font-family: "Roboto", sans-serif;
+  font-size: 1.4rem;
   border: 0;
   padding: 0;
   
   /* min-height: 100vh; */
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   /* max-width: 1920px; */
   /* margin: 0 auto; */
 }
