--- a/sections/cart.liquid
+++ b/sections/cart.liquid
@@ -67,7 +67,7 @@
 {% style %}
   .{{ section.id }} {
     width: 100%;
-    min-height: 80vh;
+    /* min-height: 80vh; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -146,9 +146,9 @@
 
   .proceed-to-checkout button {
     padding: 16px;
-    width: 250px;
+    width: 200px;
     margin: 8px 0;
-    font-size: 16px;
+    font-size: 14px;
     color: #fff;
     background-color: #353a3d;
     cursor: pointer;
@@ -165,7 +165,7 @@
     align-items: center;
     justify-content: center;
     width: 60vw;
-    min-height: 70vh;
+    /* min-height: 70vh; */
     margin: 0 auto;
   }
 
