--- a/sections/collection.liquid
+++ b/sections/collection.liquid
@@ -187,6 +187,7 @@
     color: {{ section.settings.product_title_color }};
     font-size: {{ section.settings.collection_cards_product_title_font_size }}px;
     font-weight: {{ section.settings.collection_cards_product_font_weight }};
+    /* margin-bottom: 3px; */
     transition: .3s ease;
   }
 
@@ -212,7 +213,7 @@
     position: absolute;
     width: 100%;
     transform: scale(0);
-    height: 1px;
+    height: 2px;
     bottom: 0px;
     left: 0;
     background-color: {{ section.settings.collection_cards_product_title_hover }};
@@ -347,15 +348,11 @@
             "label": "Thin"
           },
           {
-            "value": "200",
-            "label": "Light"
-          },
-          {
             "value": "400",
             "label": "Regular"
           },
           {
-            "value": "600",
+            "value": "500",
             "label": "Bold"
           }
         ],
@@ -465,15 +462,11 @@
             "label": "Thin"
           },
           {
-            "value": "200",
-            "label": "Light"
-          },
-          {
             "value": "400",
             "label": "Regular"
           },
           {
-            "value": "600",
+            "value": "500",
             "label": "Bold"
           }
         ],
@@ -511,15 +504,11 @@
             "label": "Thin"
           },
           {
-            "value": "200",
-            "label": "Light"
-          },
-          {
             "value": "400",
             "label": "Regular"
           },
           {
-            "value": "600",
+            "value": "500",
             "label": "Bold"
           }
         ],
