--- a/sections/image-slider.liquid
+++ b/sections/image-slider.liquid
@@ -280,7 +280,7 @@
       font-size: {{ block.settings.button_font_size }}px;
       margin: 2rem;
       border-radius: {{ block.settings.button_border_radius }}px;
-      transition: all 0.{{ block.settings.button_transition_duration }}s ease-out;
+      transition: all .15s ease-in-out;
     }
 
     /* If button shadow */
@@ -527,15 +527,11 @@
               "label": "Thin"
             },
             {
-              "value": "200",
-              "label": "Light"
-            },
-            {
               "value": "400",
               "label": "Regular"
             },
             {
-              "value": "600",
+              "value": "500",
               "label": "Bold"
             }
           ],
@@ -595,15 +591,11 @@
               "label": "Thin"
             },
             {
-              "value": "200",
-              "label": "Light"
-            },
-            {
               "value": "400",
               "label": "Regular"
             },
             {
-              "value": "600",
+              "value": "500",
               "label": "Bold"
             }
           ],
@@ -615,16 +607,6 @@
       "type": "slider_content_url",
       "name": "Button",
       "settings": [
-        {
-          "type": "range",
-          "id": "button_transition_duration",
-          "min": 1,
-          "max": 99,
-          "step": 1,
-          "unit": "ms",
-          "label": "Transition Duration",
-          "default": 5
-        },
         {
           "type": "range",
           "id": "button_border_radius",
