--- a/sections/image-with-text.liquid
+++ b/sections/image-with-text.liquid
@@ -154,7 +154,7 @@
       font-size: {{ block.settings.button_font_size }}px;
       margin: 2rem 0;
       border-radius: {{ block.settings.button_border_radius }}px;
-      transition: all 0.{{ block.settings.button_transition_duration }}s ease-out;
+      transition: all .15s ease-in-out;
     }
 
     /* If button border */
@@ -496,15 +496,11 @@
               "label": "Thin"
             },
             {
-              "value": "200",
-              "label": "Light"
-            },
-            {
               "value": "400",
               "label": "Regular"
             },
             {
-              "value": "600",
+              "value": "500",
               "label": "Bold"
             }
           ],
@@ -564,15 +560,11 @@
               "label": "Thin"
             },
             {
-              "value": "200",
-              "label": "Light"
-            },
-            {
               "value": "400",
               "label": "Regular"
             },
             {
-              "value": "600",
+              "value": "500",
               "label": "Bold"
             }
           ],
@@ -584,16 +576,6 @@
       "type": "text_content_url",
       "name": "Button",
       "settings": [
-        {
-          "type": "range",
-          "id": "button_transition_duration",
-          "min": 1,
-          "max": 99,
-          "step": 1,
-          "unit": "ms",
-          "label": "Transition Duration",
-          "default": 5
-        },
         {
           "type": "range",
           "id": "button_border_radius",
