--- a/templates/customers/login.liquid
+++ b/templates/customers/login.liquid
@@ -40,7 +40,7 @@
   
   .customer-form {
     width: 60vw;
-    min-height: 81vh;
+    min-height: 82vh;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -49,7 +49,7 @@
   }
   
   .form-container {
-    width: 300px;
+    width: 550px;
     box-shadow: 0 0 8px #ccc;
     background-color: #f5f5f5;
     display: flex;
@@ -117,5 +117,17 @@
 
   .login-form li {
     list-style: none;
+  }
+
+  @media screen and (max-width: 1260px) {
+    .customer-form {
+      min-width: 90vw;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    .form-container {
+      width: 100%;
+    }
   }
 {% endstyle %}
