--- a/sections/image-with-text.liquid
+++ b/sections/image-with-text.liquid
@@ -686,19 +686,19 @@
           "type": "color",
           "id": "button_background_color",
           "label": "Background Color",
-          "default": "#000"
+          "default": "#353a3d"
         },
         {
           "type": "color",
           "id": "button_font_hover_color",
           "label": "Hover Font Color",
-          "default": "#000"
+          "default": "#fff"
         },
         {
           "type": "color",
           "id": "button_hover_color",
           "label": "Hover Background Color",
-          "default": "#ccc"
+          "default": "#000"
         },
         {
           "type": "color",
