--- a/sections/blog.liquid
+++ b/sections/blog.liquid
@@ -1,41 +1,78 @@
-<div class="position-relative text-center bg-light p-3 p-md-5">
-  <div class="col-md-5 p-lg-5 mx-auto my-5">
-    <h1 class="display-4">{{ blog.title }}</h1>
-    <p class="lead">Lorem ipsum dolor sit amet.</p>
+<div class="page-container-{{ section.id }}">
+  <div class="blog-container">
+  
+    <div>
+      <div>
+        <h1>{{ blog.title }}</h1>
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+    </div>
+  
+  
+    <div>
+      {% paginate blog.articles by 3 %}
+        <div>
+          {% for article in blog.articles %}
+            <div class="card-container">
+              <div class="card-blog">
+                {% if article.image.src != null %}
+                  <img src="{{ article.image.src | img_url: 'large' }}" alt="{{ article.img.alt }}">
+                {% else %}
+                  {{ 'image' | placeholder_svg_tag: 'card-img-top' }}
+                {% endif %}
+                <div>
+                  <h2>
+                    <a href="{{ article.url }}">{{ article.title }}</a>
+                  </h2>
+                  {{ article.author }} @ {{ article.created_at }}
+                  <p>
+                    {% if article.excerpt.size > 0 %}
+                      {{ article.excerpt }}
+                    {% else %}
+                      <p>{{ article.content | strip_html | truncatewords: 20 }}</p>
+                    {% endif %}
+                  </p>
+                </div>
+              </div>
+            </div>
+          {% endfor %}
+        </div>
+  
+        {% comment %} custom pagination {% endcomment %}
+        <div class="paginate">
+          {% render 'paginate', paginate: paginate %}
+        </div>
+      {% endpaginate %}
+    </div>
+  
   </div>
 </div>
 
+{% style %}
+  .page-container-{{ section.id }} {
+    width: 100%
+  }
 
-<div class="container my-5 p-2">
-  {% paginate blog.articles by 3 %}
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3 my-3">
-      {% for article in blog.articles %}
-        <div class="col">
-          <div class="card shadow">
-            {% if article.image.src != null %}
-              <img src="{{ article.image.src | img_url: 'large' }}" class="article-img-top" alt="{{ article.img.alt }}">
-            {% else %}
-              {{ 'image' | placeholder_svg_tag: 'card-img-top' }}
-            {% endif %}
-            <div class="card-body">
-              <h2>
-                <a href="{{ article.url }}">{{ article.title }}</a>
-              </h2>
-              {{ article.author }} @ {{ article.created_at }}
-              <p class="card-text">
-                {% if article.excerpt.size > 0 %}
-                  {{ article.excerpt }}
-                {% else %}
-                  <p>{{ article.content | strip_html | truncatewords: 20 }}</p>
-                {% endif %}
-              </p>
-            </div>
-          </div>
-        </div>
-      {% endfor %}
-    </div>
+  .blog-container {
+    width: 60vw;
+    margin: 0 auto;
+  }
 
-    {% comment %} custom pagination {% endcomment %}
-    {% render 'paginate', paginate: paginate %}
-  {% endpaginate %}
-</div>
+  .card-container {
+    display: grid;
+    grid-template-column: repeat(3, 1fr);
+  }
+
+  .card-blog {
+
+  }
+{% endstyle %}
+
+{% schema %}
+  {
+    
+  }
+{% endschema %}
+
+<script>
+</script>
