--- a/sections/cart.liquid
+++ b/sections/cart.liquid
@@ -85,6 +85,7 @@
     padding: 20px 0;
     font-size: 24px;
     font-weight: 400;
+    text-align: center;
   }
 
   .{{ section.id }} .product-title {
@@ -221,6 +222,7 @@
   }
   .grid-item-2 {
     grid-area: details;
+    padding-left: 10px;
   }
   .grid-item-4 {
     grid-area: qty;
@@ -247,6 +249,10 @@
       grid-auto-rows: minmax(100px, auto);
       grid-template-areas: 
       "picture details qty total remove";
+    }
+
+    .grid-item-2 {
+      padding-left: 5px;
     }
 
     .grid-item img {
