--- a/sections/product.liquid
+++ b/sections/product.liquid
@@ -97,7 +97,8 @@
   /* image container */
   .page-container-{{ section.id }} .image-container {
     width: 50%;
-    max-height: 50vh;
+    max-height: 70vh;
+    aspect-ratio: 1 / 1;
   }
 
   /* content container */
@@ -256,7 +257,6 @@
 
   
   /* BREAKPOINTS */
-
   @media screen and (max-width: 1260px) {
     .page-container-{{ section.id }} {
       width: 90vw;
@@ -268,6 +268,10 @@
     .content-container .form-input,
     .content-container .add-to-cart {
       width: 100%;
+    }
+
+    .page-container-{{ section.id }} .image-container {
+      aspect-ratio: unset;
     }
   }
 
@@ -403,19 +407,19 @@
         "type": "color",
         "id": "button_hover_font_color",
         "label": "Add to Cart Hover Font Color",
-        "default": "#000"
+        "default": "#fff"
       },
       {
         "type": "color",
         "id": "button_background_color",
-        "label": "Add to Background Color",
-        "default": "#000"
+        "label": "Add Cart to Background Color",
+        "default": "#353a3d"
       },
       {
         "type": "color",
         "id": "button_hover_background_color",
         "label": "Add to Cart Hover Background Color",
-        "default": "#fff"
+        "default": "#000"
       },
       {
         "type": "select",
