--- a/sections/blog.liquid
+++ b/sections/blog.liquid
@@ -1,41 +1,45 @@
 <div class="page-container-{{ section.id }}">
   <div class="blog-container">
   
-    <div>
+    {% if section.settings.show_page_title %}
       <div>
-        <h1>{{ blog.title }}</h1>
-        <p>Lorem ipsum dolor sit amet.</p>
+        <div class="blog-title-container">
+          <h1>{{ blog.title }}</h1>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
       </div>
-    </div>
+  {% endif %}
   
   
     <div>
       {% paginate blog.articles by 3 %}
         <div>
-          {% for article in blog.articles %}
-            <div class="card-container">
+          <div class="card-container">
+            {% for article in blog.articles %}
               <div class="card-blog">
-                {% if article.image.src != null %}
-                  <img src="{{ article.image.src | img_url: 'large' }}" alt="{{ article.img.alt }}">
-                {% else %}
-                  {{ 'image' | placeholder_svg_tag: 'card-img-top' }}
-                {% endif %}
-                <div>
+                <a href="{{ article.url }}">
+                  {% if article.image.src != null %}
+                    <img src="{{ article.image.src | img_url: 'large' }}" alt="{{ article.img.alt }}">
+                  {% else %}
+                    {{ 'image' | placeholder_svg_tag: 'card-img-top' }}
+                  {% endif %}
+                </a>
+                <div class="card-blog-body">
                   <h2>
                     <a href="{{ article.url }}">{{ article.title }}</a>
                   </h2>
-                  {{ article.author }} @ {{ article.created_at }}
+                  {{ article.author }} @ {{ article.created_at | date: "%a, %b %d, %y" }}
                   <p>
                     {% if article.excerpt.size > 0 %}
                       {{ article.excerpt }}
                     {% else %}
-                      <p>{{ article.content | strip_html | truncatewords: 20 }}</p>
+                      <p>{{ article.content | strip_html | truncatewords: 10 }}</p>
                     {% endif %}
                   </p>
                 </div>
               </div>
-            </div>
-          {% endfor %}
+            {% endfor %}
+          </div>
         </div>
   
         {% comment %} custom pagination {% endcomment %}
@@ -48,29 +52,167 @@
   </div>
 </div>
 
+
 {% style %}
   .page-container-{{ section.id }} {
-    width: 100%
+    width: 100%;
+    min-height: 85vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: {{ section.settings.blog_page_background }};
   }
 
   .blog-container {
-    width: 60vw;
+    width: {{ section.settings.blog_page_width }}vw;
     margin: 0 auto;
   }
 
+  .blog-title-container {
+    padding: 30px 0;
+  }
+
+  /* page title */
+  .blog-title-container h1 {
+    font-size: {{ section.settings.page_title_font_size }}px;
+    color: red;
+    padding: {{ section.settings.page_title_padding_y }}px 0;
+  }
+  
+  .blog-title-container h1,
+  .blog-title-container p {
+    text-align {{ section.settings.collection_title_position_x }};
+  }
+
+
+  /* card container */
   .card-container {
     display: grid;
-    grid-template-column: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    align-items: center;
+    /* padding-top: 30px; */
+    padding-bottom: 30px;
   }
-
+  
+  /* card */
   .card-blog {
-
+    border: 1px solid #ccc;
+    height: 100%;
+    border-radius: 10px;
+    box-shadow: 0 0 8px rgba(0,0,0,.3);
+    overflow: hidden;
+    background: #fff;
   }
+
+  /* card-image */
+  .card-blog img {
+    aspect-ratio: 1/1;
+    width: 100%;
+  }
+
+  .card-blog-body {
+    padding: 10px;
+  }
+
+  .card-blog-body h2 {
+    padding-bottom: 10px;
+  }
+
+  /* BREAKPOINTS */
+  /* @media screen and (max-width: 1260px) {
+    .blog-container {
+      width: 90vw;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    .card-container {
+      grid-template-columns: repeat(2, 1fr);
+      gap: 20px;
+    }
+  }
+
+  @media screen and (max-width: 400px) {
+    .card-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      margin: 0 auto;
+    }
+  } */
 {% endstyle %}
+
 
 {% schema %}
   {
-    
+    "name": "blogs",
+    "class": "blogs",
+    "settings": [
+      {
+        "type": "range",
+        "id": "blog_page_width",
+        "min": 30,
+        "max": 100,
+        "step": 1,
+        "unit": "vw",
+        "label": "Section Width",
+        "default": 60
+      },
+      {
+        "type": "color",
+        "id": "blog_page_background",
+        "label": "Background Color",
+        "default": "#fff"
+      },
+      {
+        "type": "checkbox",
+        "id": "show_page_title",
+        "label": "Show Page Title",
+        "default": true
+      },
+      {
+        "type": "range",
+        "id": "page_title_font_size",
+        "min": 12,
+        "max": 64,
+        "step": 1,
+        "unit": "px",
+        "label": "Page Title Font Size",
+        "default": 24
+      },
+      {
+        "type": "range",
+        "id": "page_title_padding_y",
+        "min": 0,
+        "max": 100,
+        "step": 1,
+        "unit": "px",
+        "label": "Page Title Padding Y",
+        "default": 12
+      },
+      {
+        "type": "select",
+        "id": "page_title_position_x",
+        "label": "Page Title Position",
+        "options": [
+          {
+            "value": "left",
+            "label": "Left"
+          },
+          {
+            "value": "center",
+            "label": "Center"
+          },
+          {
+            "value": "right",
+            "label": "Right"
+          }
+        ],
+        "default": "left"
+      }
+    ]
   }
 {% endschema %}
 
